# hardcaml_verilator

./: CHANGES.md  README.md  hardcaml_verilator.opam
src/: config.ml  config.mli  ctypes_foreign_flat.ml  dune  hardcaml_verilator.ml  hardcaml_verilator.mli  optimization_level.ml  optimization_level.mli  output_split.ml  output_split.mli  threads.ml  threads.mli  verilator_version.ml  verilator_version.mli
test/: dune  hardcaml_verilator_test.ml  test_all_port_sizes.ml  test_combinatorial_and_threaded.ml  test_cyclesim.ml  test_cyclesim_with_interface.ml  test_flags.ml  test_hardcaml_verilator.ml  test_initial_values.ml  test_sequential.ml  test_supports_topname_properly.ml  test_waveform_with_internal_signals.ml  utils.ml  utils.mli
test_regression/: dune  hardcaml_verilator_test_regression.ml  test_lookup.ml
