opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_verilator"
bug-reports: "https://github.com/janestreet/hardcaml_verilator/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_verilator.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_verilator/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "core_unix"
  "hardcaml"
  "jane_rope"
  "ppx_hardcaml"
  "ppx_jane"
  "stdio"
  "ctypes"         {= "0.23.0+ox"}
  "ctypes-foreign" {= "0.23.0+ox"}
  "dune"           {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml Verilator Simulation Backend"
description: "
Very fast verilator-based simulations of Hardcaml circuits.

This library transparently compiles a verilator-based shared library, and links it back
to the running executable to be used as a Cyclesim simulation.
"
